src/objects/Desk_Migration__c.object
<!--
  ~ Copyright (c) 2017, Salesforce.com, Inc.
  ~ All rights reserved.
  ~ Licensed under the BSD 3-Clause license.
  ~ For full license text, see LICENSE.txt file in the repo root or https://opensource.org/licenses/BSD-3-Clause
  -->

<CustomObject>
    <description>This custom object is used to view the status of a Desk.com to Salesforce Service Cloud migration.</description>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <label>Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Migration Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Group Member</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Note</fullName>
                </value>
                <value>
                    <fullName>Interaction</fullName>
                </value>
                <value>
                    <fullName>Attachment</fullName>
                </value>
                <value>
                    <fullName>Article</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordsFailed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Records Failed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordsMigrated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Records Migrated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordsTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Records Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RestartLink__c</fullName>
        <description>Stores JSON for restarting the current job</description>
        <label>RestartLink</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Running</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Desk Migration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DM-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Desk Migrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>